--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <div class="card p-0 mx-auto " style="width: 21rem; border: none;">
                         <div class="card-body p-0">
                           <div class="bg-danger rounded-top"></div>
-                          <div class="card-subtitle d-flex justify-content-center ">
-                            <img src="./images/image-victor.jpg" class="victor border border-white-5" alt="">
+                          <div class="card-subtitle d-flex justify-content-center">
+                            <img src="./images/image-victor.jpg" class="victor border border-light-5" alt="">
                          </div>
                           <div class="d-flex flex-row justify-content-center mt-3">
                             <div class="d-flex flex-column align-items-center ">
